[package]
name = "ll"
version = "8.0.0"
edition = "2018"
authors = ["Aaron Abrams <aaron@abrams.cc>"]
description = "rust logging library"
license = "MIT"
repository = "https://github.com/boujeepossum/ll"

[dependencies]
anyhow = "1"
chrono = "0.4"
colored = "3"
crossterm = "0.29"
lazy_static = "1"
strip-ansi-escapes = "0.2"
ll_macros = { version = "8.0.0", path = "../ll_macros" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
k9 = "0.12"
