[package]
name = "ll_macros"
version = "8.0.0"
edition = "2021"
authors = ["Aaron Abrams <aaron@abrams.cc>"]
description = "Proc macros for the ll logging library"
license = "MIT"
repository = "https://github.com/boujeepossum/ll"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
